--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -1,6 +1,64 @@
-.nav{
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+
+.nav {
     width: 218px;
     height: 1047px;
     flex-shrink: 0;
-    position:fixed
+    position: fixed;
+    background-color: #FFF;
 }
+
+#sidebar{
+    margin-top: 20px;
+}
+
+.navbar-container {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.image-container {
+    margin-right: 10px;
+}
+
+.text-container {
+    color: var(--Text, #030229);
+    font-family: Nunito;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.items{
+    margin-top: 50px;
+}
+.items ul {
+    list-style: none;
+    padding: 0;
+}
+
+.items li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 34px;
+    margin-left: 31px;
+  }
+  
+  .items img {
+    width: 30px; 
+    margin-right: 10px; 
+  }
+
+  .items ul li a {
+    text-decoration: none;
+    color: #9A9AA9;
+    font-family: Nunito;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
