--- a/src/component/Panel/leftPanel.css
+++ b/src/component/Panel/leftPanel.css
@@ -2,13 +2,14 @@
     width: "50%";
     float: "left";
     height: "100vh";
-    background-color: "#605BFF"; 
+    background-color: "#F8FAFF"; 
     overflow: "hidden";
     position: "relative";
     display: "flex";
     justify-content: "center"; 
     align-items: "center"; 
-    color: "white";
+    color: "#F8FAFF";
+    
 }
 
 .image{
