--- a/src/component/Panel/rightPanel.css
+++ b/src/component/Panel/rightPanel.css
@@ -5,10 +5,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 40px;
     width: 400px;
     height: 32.933px;
     margin-left: 93px;
+   
 }
 
 .button-style {
@@ -27,11 +28,14 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+   
+    margin-bottom: 60px;
+    
   }
 
   .loginContainer{
     width: 422.635px;
-    height: 347.988px;
+    height: 380.988px;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
@@ -40,6 +44,7 @@
     background: #FFF;
     /* margin: 10px; */
     margin-left: 93px;
+   
     
   }
   .input-container {
